; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/aix/local/extr_4231.c_shell.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/aix/local/extr_4231.c_shell.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [11 x i8] c"[-] select\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @shell(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  %7 = alloca [4096 x i8], align 16
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  br label %8

8:                                                ; preds = %75, %2
  %9 = call i32 @FD_ZERO(i32* %6)
  %10 = load i32*, i32** %3, align 8
  %11 = getelementptr inbounds i32, i32* %10, i64 0
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @FD_SET(i32 %12, i32* %6)
  %14 = load i32*, i32** %4, align 8
  %15 = getelementptr inbounds i32, i32* %14, i64 0
  %16 = load i32, i32* %15, align 4
  %17 = call i32 @FD_SET(i32 %16, i32* %6)
  %18 = load i32*, i32** %3, align 8
  %19 = getelementptr inbounds i32, i32* %18, i64 0
  %20 = load i32, i32* %19, align 4
  %21 = load i32*, i32** %4, align 8
  %22 = getelementptr inbounds i32, i32* %21, i64 0
  %23 = load i32, i32* %22, align 4
  %24 = call i64 @MAX(i32 %20, i32 %23)
  %25 = add nsw i64 %24, 1
  %26 = call i64 @select(i64 %25, i32* %6, i32* null, i32* null, i32* null)
  store i64 %26, i64* %5, align 8
  %27 = load i64, i64* %5, align 8
  %28 = icmp slt i64 %27, 0
  br i1 %28, label %29, label %31

29:                                               ; preds = %8
  %30 = call i32 @perror(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0))
  br label %76

31:                                               ; preds = %8
  %32 = load i32*, i32** %3, align 8
  %33 = getelementptr inbounds i32, i32* %32, i64 0
  %34 = load i32, i32* %33, align 4
  %35 = call i64 @FD_ISSET(i32 %34, i32* %6)
  %36 = icmp ne i64 %35, 0
  br i1 %36, label %37, label %53

37:                                               ; preds = %31
  %38 = load i32*, i32** %3, align 8
  %39 = getelementptr inbounds i32, i32* %38, i64 0
  %40 = load i32, i32* %39, align 4
  %41 = getelementptr inbounds [4096 x i8], [4096 x i8]* %7, i64 0, i64 0
  %42 = call i64 @read(i32 %40, i8* %41, i32 4096)
  store i64 %42, i64* %5, align 8
  %43 = load i64, i64* %5, align 8
  %44 = icmp sle i64 %43, 0
  br i1 %44, label %45, label %46

45:                                               ; preds = %37
  br label %76

46:                                               ; preds = %37
  %47 = load i32*, i32** %3, align 8
  %48 = getelementptr inbounds i32, i32* %47, i64 1
  %49 = load i32, i32* %48, align 4
  %50 = getelementptr inbounds [4096 x i8], [4096 x i8]* %7, i64 0, i64 0
  %51 = load i64, i64* %5, align 8
  %52 = call i32 @write(i32 %49, i8* %50, i64 %51)
  br label %53

53:                                               ; preds = %46, %31
  %54 = load i32*, i32** %4, align 8
  %55 = getelementptr inbounds i32, i32* %54, i64 0
  %56 = load i32, i32* %55, align 4
  %57 = call i64 @FD_ISSET(i32 %56, i32* %6)
  %58 = icmp ne i64 %57, 0
  br i1 %58, label %59, label %75

59:                                               ; preds = %53
  %60 = load i32*, i32** %4, align 8
  %61 = getelementptr inbounds i32, i32* %60, i64 0
  %62 = load i32, i32* %61, align 4
  %63 = getelementptr inbounds [4096 x i8], [4096 x i8]* %7, i64 0, i64 0
  %64 = call i64 @read(i32 %62, i8* %63, i32 4096)
  store i64 %64, i64* %5, align 8
  %65 = load i64, i64* %5, align 8
  %66 = icmp sle i64 %65, 0
  br i1 %66, label %67, label %68

67:                                               ; preds = %59
  br label %76

68:                                               ; preds = %59
  %69 = load i32*, i32** %4, align 8
  %70 = getelementptr inbounds i32, i32* %69, i64 1
  %71 = load i32, i32* %70, align 4
  %72 = getelementptr inbounds [4096 x i8], [4096 x i8]* %7, i64 0, i64 0
  %73 = load i64, i64* %5, align 8
  %74 = call i32 @write(i32 %71, i8* %72, i64 %73)
  br label %75

75:                                               ; preds = %68, %53
  br label %8

76:                                               ; preds = %67, %45, %29
  ret void
}

declare dso_local i32 @FD_ZERO(i32*) #1

declare dso_local i32 @FD_SET(i32, i32*) #1

declare dso_local i64 @select(i64, i32*, i32*, i32*, i32*) #1

declare dso_local i64 @MAX(i32, i32) #1

declare dso_local i32 @perror(i8*) #1

declare dso_local i64 @FD_ISSET(i32, i32*) #1

declare dso_local i64 @read(i32, i8*, i32) #1

declare dso_local i32 @write(i32, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
